1134920504	Neues Feature: „Nachrichteninformierung“.
1134913981	Neue Versionsnummer: 0.1.6
1134913979	Das Herunterfahren des Eventhandlers wird nun sauber durchgeführt, das „Exclusive lock“-Problem sollte also nicht mehr auftreten.
1134912055	Neue Versionsnummer: 0.1.5
1134912054	Man kann Nachrichten nun archivieren, archivierte Nachrichten werden nicht automatisch nach einem bestimmen Zeitraum gelöscht.
1134906302	Die Standardskins wurden ummodelliert und funktionieren jetzt alle im Internet Explorer.
1134852860	Neue Versionsnummer: 0.1.4
1134852857	Es werden jetzt zwei separate Allianzhighscores für Gesamtpunkte und Punkteschnitt geführt.
1134846969	Die Highscores werden jetzt in Seiten à 100 Plätze eingeteilt.
1134838813	Bug behoben: Wenn man aus einer Allianz austrat, wurde die Allianz in der Karte und in den Highscores nicht entfernt.
1134789434	Bei veröffentlichten Kampfberichten werden jetzt die Koordinaten entfernt.
1134683887	Je inaktiver ein Benutzer ist, desto schwächer wirken seine Rohstoffe ab jetzt in den Handelskurs ein.
1134599349	Option „Externe Navigationslinks“ hinzugefügt.
1134479141	Wenn man eine Flotte langsamer losschickte, kam sie entsprechend schneller zurück.
1134330847	Abschaltbare Werbung eingebaut, wollen wir sehen, ob es sich lohnt.
1134249180	Rohstoffproduktion im Imperium nun auch für x Tage berechnebar.
1134247707	Neue Versionsnummer: 0.1.3
1134247705	Neues Feature: Imperium.
1134227596	Neue Versionsnummer: 0.1.2
1134227595	Allianzhighscores eingebaut.
1134173858	Neue Versionsnummer: 0.1.1
1134173856	Gründliche Bugs im Flottensystem behoben, die definitiv auch zur Flottenverdopplung beigetragen haben.
1133910834	Wenn man Verbündete über die Karte ausspioniert, wird jetzt ebenfalls nur noch eine Spionagesonde geschickt.
1133724452	Neue Versionsnummer: 0.1.0
1133724450	Allianzsystem eingebaut.
1133382639	Kleinen großen Sicherheitsbug behoben, hoffen wir, dass Flottenverdopplung daran lag.
1133272683	Neue Versionsnummer: 0.0.8