@@ -1,3 +1,4 @@
+1134922174	Etwaig aktivierte externe Navigationslinks stehen nun ganz unten in der Navigation.
 1134920504	Neues Feature: „Nachrichteninformierung“.
 1134913981	Neue Versionsnummer: 0.1.6
 1134913979	Das Herunterfahren des Eventhandlers wird nun sauber durchgeführt, das „Exclusive lock“-Problem sollte also nicht mehr auftreten.
